refactor PlayerAi its Thoughts, re-enable check message

--- a/ChessLogic/ChessLogic.csproj
+++ b/ChessLogic/ChessLogic.csproj
@@ -58,6 +58,7 @@
     <Compile Include="PlayerAi.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Square.cs" />
+    <Compile Include="Thought.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
